force-app/main/default/objects/FF_KA_TID__mdt/FF_KA_TID__mdt.object-meta.xml
<CustomObject>
    <description>Key Assumptions and SOW Template ID by Billing Country used in Financial Force Project and SOW</description>
    <label>FF KA &amp; TmpID</label>
    <pluralLabel>FF KA &amp; TmpID</pluralLabel>
</CustomObject>