force-app/main/default/objects/FF_KA_TID__mdt/fields/Cloud_Env__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Env__c</fullName>
    <label>Cloud Env</label>
    <length>255</length>
    <type>Text</type>
</CustomField>