force-app/main/default/objects/FF_KA_TID__mdt/fields/IMGS_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>IMGS_Template_ID__c</fullName>
    <label>IMGS Template ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>