force-app/main/default/objects/FF_KA_TID__mdt/fields/Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Template_ID__c</fullName>
    <description>PSE Project SOW Template ID</description>
    <label>Template ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>