force-app/main/default/objects/FF_KA_TID__mdt/listViews/Key_Assumptions.listView-meta.xml
<ListView>
    <fullName>Key_Assumptions</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Billing_Country__c</columns>
    <columns>Billing_Type__c</columns>
    <columns>Language__c</columns>
    <columns>Culture__c</columns>
    <columns>Template_ID__c</columns>
    <columns>Servicing_Region__c</columns>
    <columns>Key_Assumption_Text__c</columns>
    <columns>Cloud_Env__c</columns>
    <columns>Quality_Control__c</columns>
    <filterScope>Everything</filterScope>
    <label>Key Assumptions</label>
    <language>en_US</language>
</ListView>